<resources>
    <string name="app_name">Trivia App</string>
    <string name="email">Email</string>
    <string name="email_hint">Email Address…</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Sign In</string>
    <string name="password_hint">Password…</string>
    <string name="register_success">User registered successfully! We sent you an email to verify your account.</string>
    <string name="register_fai">Failed to register user!</string>
    <string name="register_fail_uc">Email is already in use!</string>
    <string name="email_required">Email is required!</string>
    <string name="password_required">Password is required!</string>
    <string name="email_valid">Email should be valid!</string>
    <string name="name_required">Name is required!</string>
    <string name="lastname_required">Last name is required!</string>
    <string name="login_fail">Wrong credentials!</string>
    <string name="login_fail_verify">You have to verify your account before login in.</string>
    <string name="register_form_title">Register Form</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_button">Register</string>
    <string name="forgot_password_title">RESET PASSWORD</string>
    <string name="enter_email">Enter your email here:</string>
    <string name="reset_password_button">Reset</string>
    <string name="reset_pw_email">We\'ve sent you an email for password reseting</string>
    <string name="smth_wrong">Something went wrong! Try again later.</string>
    <string name="logout">Logout</string>
    <string name="create_a_quiz">Create a quiz</string>
    <string name="logo">logo</string>
    <string name="please_fill_out_the_form">Please fill out the form!</string>
    <string name="registerBtnText">REGISTER</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="don_t_have_an_account">Don\'t have an account? Register</string>
    <string name="remember_me">Remember me!</string>
    <string name="cancel">Cancel</string>
    <string name="fiek_triviaapp">FIEK TriviaApp</string>
    <string name="test_your_knowledge">Test your knowledge</string>
    <string-array name="categories">
        <item>General Knowledge</item>
        <item>Sports</item>
        <item>History</item>
        <item>Geography</item>
        <item>Science: Computers</item>
        <item>Art</item>
    </string-array>
    <string-array name="difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="number_of_questions_required">Number of questions required!</string>
    <string-array name="number_of_questions_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>