<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/owLogo"
        android:layout_width="120sp"
        android:layout_height="100sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="3dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar2"
        android:visibility="gone"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_marginTop="150dp"
    android:padding="16dp"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColor="@color/cardview_dark_background"
        android:textColorHint="@color/cardview_dark_background"
        android:id="@+id/etEmail"
        android:hint="@string/email_hint"
        android:autofillHints="@string/email_hint" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="@color/cardview_dark_background"
        android:textColorHint="@color/cardview_dark_background"
        android:id="@+id/etPassword"
        android:hint="@string/password_hint"
        android:autofillHints="@string/email_hint" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="24sp"
            android:textColor="@color/cardview_dark_background"
            android:textColorHint="@color/cardview_dark_background"
            android:backgroundTint="@color/yellowLight"
            android:id="@+id/btnLogin"
            android:layout_gravity="end"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/twForgotPassword"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/cardview_dark_background"
            android:textColorHint="@color/cardview_dark_background"
            android:paddingTop="8dp"
            android:layout_gravity="end"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/twRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textAlignment="viewEnd"
            android:textColor="@color/cardview_dark_background"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="18sp"
             />

    </LinearLayout>


</LinearLayout>
</RelativeLayout>