<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:gravity="center_vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_title"
            android:id="@+id/twTitle"
            android:textSize="30sp"
            android:padding="20dp"
            android:layout_centerHorizontal="true">
        </TextView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@id/twTitle">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:id="@+id/etEmail"
            android:textSize="16sp"
            android:padding="20dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_button"
            android:textSize="16sp"
            android:padding="20dp"
            android:id="@+id/btnResetPassword"
            android:layout_below="@id/etEmail"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>